--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
     "tailwindcss": "^2.1.1"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^4.0.3",
+    "postcss": "^8.2.10"
   }
 }
