--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.1.1",
+    "tailwindcss-transforms": "^2.2.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.3",
